@@ -17,28 +17,24 @@ public abstract class EntityLiving extends Entity implements Reproductive {
     public EntityLiving reproduce() {
         try {
             return copy(this);
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                 InvocationTargetException e) {
             throw new RuntimeException(e);
         }
     }
 
-    private <T> T copy(T entity) throws IllegalAccessException, InstantiationException {
+    private <T> T copy(T entity) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         Class<?> aClass = entity.getClass();
-        T newEntity = (T) entity.getClass().newInstance();
-
+        T newEntity = (T) entity.getClass().getConstructor().newInstance();
         while (aClass != null) {
             copyFields(entity, newEntity, aClass);
             aClass = aClass.getSuperclass();
         }
-
         return newEntity;
     }
 
     private <T> T copyFields(T entity, T newEntity, Class<?> aClass) throws IllegalAccessException {
-        List<Field> fields = new ArrayList<>();
-        for (Field field : aClass.getDeclaredFields()) {
-            fields.add(field);
-        }
+        List<Field> fields = new ArrayList<>(Arrays.asList(aClass.getDeclaredFields()));
         for (Field field : fields) {
             field.setAccessible(true);
             field.set(newEntity, field.get(entity));
